Updated home page

--- a/index.html
+++ b/index.html
@@ -31,24 +31,23 @@
             </div>
             
             <div id=items>
-            <h2>Top 5 Favorite Colors</h2>
-            <ol>
-                <li>Orange</li>
-                <li>Cerulean</li>
-                <li>Mint</li>
-                <li>Purple</li>
-                <li>Yellow</li>
-            </ol>
+            <h2>Skills</h2>
+            <ul>
+                <li>Web Development</li>
+                <li>Javascript</li>
+                <li>Java</li>
+                <li>Python</li>
+                <li>HTML / CSS</li>
+            </ul>
             </div>
             
             <div id=items>
-            <h2>Fun Facts</h2>
+            <h2>Education</h2>
             <ul>
-                <li>I own over 60 sets of dice (with 7 dice in each set)</li>
-                <li>I used to be an Elementary Education major</li>
-                <li>I will be getting married next October (unless COVID changes that plan)</li>
-                <li>I did theater and musical theater in high school</li>
-                <li>I have played the flute for a little over 14 years now</li>
+                <li>Red Bridge Elementary (2002 - 2008)</li>
+                <li>Center Middle School (2008 - 2011)</li>
+                <li>Center Senior High School (2011 - 2015)</li>
+                <li>Northwest Missouri State Univeristy (2015 - Present)</li>
             </ul>
             </div>
         </article>
