Changed Titles and Updated JS

--- a/volumecalc.html
+++ b/volumecalc.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Lindsey Fares - P2 Styled Site Contact</title>
+    <script src="main.js"></script>
+    <title>Lindsey Fares - P3 Client Side Application</title>
 </head>
 <body>
     <header><h1>Lindsey Fares</h1></header>
