--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
         <a href="index.html">Home</a>
         <a href="contact.html">Contact</a>
-        <a href="volumecalc.html">Volume Calculator</a>
+        <a href="areacalc.html">Area Calculator</a>
         <img src="imgofme.jpg" class=img-circle height=75 width=75>
     </nav>
     <div>
