--- a/areacalc.html
+++ b/areacalc.html
@@ -26,10 +26,9 @@
           <label for="height">Height (1-1000):</label><br>
           <input type="number" id="height" name="height" min="1" max="1000" value="1"><br>
           <label for="length">Length (1-1000):</label><br>
-          <input type="number" id="length" name="length" min="1" max="1000" value="1"><br>
-          <label for="width">Width (1-1000):</label><br>
-          <input type="number" id="width" name="width" min="1" max="1000" value="1"><br><br>
-          <button id="volumeBtn" type="button" class="colored">Calculate the Volume</button>
+          <input type="number" id="length" name="length" min="1" max="1000" value="1">
+          <br><br>
+          <button id="volumeBtn" type="button" class="colored">Calculate the Area</button>
           <button id="clearBtn" type="button" class="colored">Clear Storage</button>
         </form> 
             <p id="result"></p>
@@ -37,7 +36,7 @@
     </main>
     <footer>
         <p>Background picture credit to Lindsey Fares (taken on 05 May 2020)</p>
-    </footer>
+        </footer>
     </div>
 </body>
 </html>
