--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
           <input type="text" id="lname" name="lname" value="Doe"><br>
           <label for="email">Email:</label><br>
           <input type="text" id="email" name="email" value="someone@email.com"><br><br>
-          <input type="submit" value="Submit" class=colored>
+        <button type="submit" value="Submit">Submit</button>
         </form> 
         </div>
     </main>
